--- a/parser/parser.vcxproj
+++ b/parser/parser.vcxproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -23,56 +23,116 @@
     <Xml Include="pom.xml">
       <SubType>Designer</SubType>
     </Xml>
-    <Xml Include="src\nar\resources\noarch\omdc-sbe.xml" />
+    <Xml Include="src\nar\resources\noarch\omdc-sbe.xml">
+      <SubType>Designer</SubType>
+    </Xml>
     <Xml Include="src\nar\resources\noarch\omdd-sbe.xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\main\include\omdc_sbe\AddOddLotOrder.h" />
     <ClInclude Include="src\main\include\omdc_sbe\AddOrder.h" />
     <ClInclude Include="src\main\include\omdc_sbe\AggregateOrderBookUpdate.h" />
+    <ClInclude Include="src\main\include\omdc_sbe\BrokerQueue.h" />
+    <ClInclude Include="src\main\include\omdc_sbe\ClosingPrice.h" />
+    <ClInclude Include="src\main\include\omdc_sbe\CurrencyRate.h" />
+    <ClInclude Include="src\main\include\omdc_sbe\DeleteOddLotOrder.h" />
     <ClInclude Include="src\main\include\omdc_sbe\DeleteOrder.h" />
+    <ClInclude Include="src\main\include\omdc_sbe\DisasterRecoverySignal.h" />
     <ClInclude Include="src\main\include\omdc_sbe\GroupSize.h" />
+    <ClInclude Include="src\main\include\omdc_sbe\GroupSize16.h" />
+    <ClInclude Include="src\main\include\omdc_sbe\GroupSize8.h" />
+    <ClInclude Include="src\main\include\omdc_sbe\Heartbeat.h" />
+    <ClInclude Include="src\main\include\omdc_sbe\IndexData.h" />
+    <ClInclude Include="src\main\include\omdc_sbe\IndexDefinition.h" />
+    <ClInclude Include="src\main\include\omdc_sbe\IndicativeEquilibriumPrice.h" />
+    <ClInclude Include="src\main\include\omdc_sbe\LiquidityProvider.h" />
+    <ClInclude Include="src\main\include\omdc_sbe\Logon.h" />
+    <ClInclude Include="src\main\include\omdc_sbe\LogonResponse.h" />
+    <ClInclude Include="src\main\include\omdc_sbe\MarketDefinition.h" />
     <ClInclude Include="src\main\include\omdc_sbe\MessageHeader.h" />
     <ClInclude Include="src\main\include\omdc_sbe\ModifyOrder.h" />
+    <ClInclude Include="src\main\include\omdc_sbe\NominalPrice.h" />
+    <ClInclude Include="src\main\include\omdc_sbe\OrderImbalance.h" />
+    <ClInclude Include="src\main\include\omdc_sbe\ReferencePrice.h" />
+    <ClInclude Include="src\main\include\omdc_sbe\RefreshComplete.h" />
+    <ClInclude Include="src\main\include\omdc_sbe\RetransmissionReq.h" />
+    <ClInclude Include="src\main\include\omdc_sbe\RetransmissionResp.h" />
+    <ClInclude Include="src\main\include\omdc_sbe\SecurityDefinition.h" />
+    <ClInclude Include="src\main\include\omdc_sbe\SecurityStatus.h" />
+    <ClInclude Include="src\main\include\omdc_sbe\SequenceReset.h" />
+    <ClInclude Include="src\main\include\omdc_sbe\SeriesDefinitionBase.h" />
+    <ClInclude Include="src\main\include\omdc_sbe\Trade.h" />
+    <ClInclude Include="src\main\include\omdc_sbe\TradeCancel.h" />
+    <ClInclude Include="src\main\include\omdc_sbe\TradeTicker.h" />
+    <ClInclude Include="src\main\include\omdc_sbe\TradingSessionStatus.h" />
+    <ClInclude Include="src\main\include\omdc_sbe\VCMTrigger.h" />
     <ClInclude Include="src\main\include\omdd_sbe\AddOrder.h" />
     <ClInclude Include="src\main\include\omdd_sbe\AggregateOrderBookUpdate.h" />
+    <ClInclude Include="src\main\include\omdd_sbe\CalculatedOpeningPrice.h" />
+    <ClInclude Include="src\main\include\omdd_sbe\ClassDefinition.h" />
+    <ClInclude Include="src\main\include\omdd_sbe\CombinationDefinition.h" />
+    <ClInclude Include="src\main\include\omdd_sbe\CommodityDefinition.h" />
+    <ClInclude Include="src\main\include\omdd_sbe\CommodityStatus.h" />
     <ClInclude Include="src\main\include\omdd_sbe\DeleteOrder.h" />
+    <ClInclude Include="src\main\include\omdd_sbe\DisasterRecoverySignal.h" />
+    <ClInclude Include="src\main\include\omdd_sbe\EstimatedAverageSettlementPrice.h" />
     <ClInclude Include="src\main\include\omdd_sbe\GroupSize.h" />
+    <ClInclude Include="src\main\include\omdd_sbe\GroupSize8.h" />
+    <ClInclude Include="src\main\include\omdd_sbe\ImpliedVolatility.h" />
+    <ClInclude Include="src\main\include\omdd_sbe\Logon.h" />
+    <ClInclude Include="src\main\include\omdd_sbe\LogonResponse.h" />
+    <ClInclude Include="src\main\include\omdd_sbe\MarketAlert.h" />
+    <ClInclude Include="src\main\include\omdd_sbe\MarketStatus.h" />
     <ClInclude Include="src\main\include\omdd_sbe\MessageHeader.h" />
     <ClInclude Include="src\main\include\omdd_sbe\ModifyOrder.h" />
+    <ClInclude Include="src\main\include\omdd_sbe\OpenInterest.h" />
+    <ClInclude Include="src\main\include\omdd_sbe\OrderbookClear.h" />
+    <ClInclude Include="src\main\include\omdd_sbe\QuoteRequest.h" />
     <ClInclude Include="src\main\include\omdd_sbe\RefreshComplete.h" />
+    <ClInclude Include="src\main\include\omdd_sbe\RetransmissionRequest.h" />
+    <ClInclude Include="src\main\include\omdd_sbe\RetransmissionResponse.h" />
+    <ClInclude Include="src\main\include\omdd_sbe\SequenceReset.h" />
     <ClInclude Include="src\main\include\omdd_sbe\SeriesDefinitionBase.h" />
+    <ClInclude Include="src\main\include\omdd_sbe\SeriesDefinitionExtended.h" />
+    <ClInclude Include="src\main\include\omdd_sbe\SeriesStatistics.h" />
+    <ClInclude Include="src\main\include\omdd_sbe\SeriesStatus.h" />
+    <ClInclude Include="src\main\include\omdd_sbe\Trade.h" />
+    <ClInclude Include="src\main\include\omdd_sbe\TradeAmendment.h" />
+    <ClInclude Include="src\main\include\omdd_sbe\TradeStatistics.h" />
     <ClInclude Include="src\main\include\openomd\multicastutil.h" />
     <ClInclude Include="src\main\include\openomd\omdparser.h" />
-    <ClInclude Include="src\main\include\openomd\parser.h" />
     <ClInclude Include="src\main\include\sbe\sbe.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\main\c\multicastutil.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{1ebfd4e7-64ad-4e23-8288-a7775bef2900}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>parser</RootNamespace>
-    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
@@ -116,7 +176,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_ENABLE_ATOMIC_ALIGNMENT_FIX;WIN32;_DEBUG;_WINDOWS;_USRDLL;parser_exports;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(ProjectDir)\src\main\include;$(SolutionDir)\thirdparty\target\nar\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\src\main\include;$(boostDir)</AdditionalIncludeDirectories>
       <DisableSpecificWarnings>4251;4275;4819</DisableSpecificWarnings>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <MinimalRebuild>false</MinimalRebuild>
@@ -136,7 +196,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_ENABLE_ATOMIC_ALIGNMENT_FIX;WIN32;_DEBUG;_WINDOWS;_USRDLL;parser_exports;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(ProjectDir)\src\main\include;$(SolutionDir)\thirdparty\target\nar\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\src\main\include;$(boostDir)</AdditionalIncludeDirectories>
       <DisableSpecificWarnings>4251;4275;4819</DisableSpecificWarnings>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <MinimalRebuild>false</MinimalRebuild>
@@ -158,7 +218,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>_ENABLE_ATOMIC_ALIGNMENT_FIX;WIN32;NDEBUG;_WINDOWS;_USRDLL;parser_exports;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(ProjectDir)\src\main\include;$(SolutionDir)\thirdparty\target\nar\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\src\main\include;$(boostDir)</AdditionalIncludeDirectories>
       <DisableSpecificWarnings>4251;4275;4819</DisableSpecificWarnings>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <MinimalRebuild>false</MinimalRebuild>
@@ -182,7 +242,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>_ENABLE_ATOMIC_ALIGNMENT_FIX;WIN32;NDEBUG;_WINDOWS;_USRDLL;parser_exports;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(ProjectDir)\src\main\include;$(SolutionDir)\thirdparty\target\nar\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\src\main\include;$(boostDir)</AdditionalIncludeDirectories>
       <DisableSpecificWarnings>4251;4275;4819</DisableSpecificWarnings>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <MinimalRebuild>false</MinimalRebuild>
