--- a/parser/parser-test/parser-test.vcxproj
+++ b/parser/parser-test/parser-test.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{33275ca3-bf2d-4210-b6d2-619c94ded438}</ProjectGuid>
     <RootNamespace>parser_test</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -96,7 +96,7 @@
       <AdditionalLibraryDirectories>..\target\test-nar\gmock_main-$(GmockVersion)-amd64-Windows-msvc-static\lib\amd64-Windows-msvc\static;..\target\test-nar\gmock-$(GmockVersion)-amd64-Windows-msvc-static\lib\amd64-Windows-msvc\static;..\target\nar\lib\amd64-Windows-msvc\shared;..\target\nar\lib\amd64-Windows-msvc\static;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;gmock_main-$(GmockVersion)d.lib;gmock-$(GmockVersion)d.lib;boost_chrono-$(BoostVersion)d.lib;boost_date_time-$(BoostVersion)d.lib;boost_filesystem-$(BoostVersion)d.lib;boost_log-$(BoostVersion)d.lib;boost_log_setup-$(BoostVersion)d.lib;boost_regex-$(BoostVersion)d.lib;boost_system-$(BoostVersion)d.lib;boost_thread-$(BoostVersion)d.lib;icestorm-$(IceVersion)d.lib;iceutil-$(IceVersion)d.lib;ice-$(IceVersion)d.lib;protobuf-$(ProtobufVersion)d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;gmock-$(GmockVersion)d.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalOptions>/ignore:4099 %(AdditionalOptions)</AdditionalOptions>
     </Link>
     <PostBuildEvent>
@@ -119,7 +119,7 @@
       <AdditionalLibraryDirectories>..\target\test-nar\gmock_main-$(GmockVersion)-amd64-Windows-msvc-static\lib\amd64-Windows-msvc\static;..\target\test-nar\gmock-$(GmockVersion)-amd64-Windows-msvc-static\lib\amd64-Windows-msvc\static;..\target\nar\lib\amd64-Windows-msvc\shared;..\target\nar\lib\amd64-Windows-msvc\static;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;gmock_main-$(GmockVersion)d.lib;gmock-$(GmockVersion)d.lib;boost_chrono-$(BoostVersion)d.lib;boost_date_time-$(BoostVersion)d.lib;boost_filesystem-$(BoostVersion)d.lib;boost_log-$(BoostVersion)d.lib;boost_log_setup-$(BoostVersion)d.lib;boost_regex-$(BoostVersion)d.lib;boost_system-$(BoostVersion)d.lib;boost_thread-$(BoostVersion)d.lib;icestorm-$(IceVersion)d.lib;iceutil-$(IceVersion)d.lib;ice-$(IceVersion)d.lib;protobuf-$(ProtobufVersion)d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;gmock-$(GmockVersion)d.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalOptions>/ignore:4099 %(AdditionalOptions)</AdditionalOptions>
     </Link>
     <PostBuildEvent>
@@ -146,7 +146,7 @@
       <AdditionalLibraryDirectories>..\target\test-nar\gmock_main-$(GmockVersion)-amd64-Windows-msvc-static\lib\amd64-Windows-msvc\static;..\target\test-nar\gmock-$(GmockVersion)-amd64-Windows-msvc-static\lib\amd64-Windows-msvc\static;..\target\nar\lib\amd64-Windows-msvc\shared;..\target\nar\lib\amd64-Windows-msvc\static;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;gmock_main-$(GmockVersion).lib;gmock-$(GmockVersion).lib;boost_chrono-$(BoostVersion).lib;boost_date_time-$(BoostVersion).lib;boost_filesystem-$(BoostVersion).lib;boost_log-$(BoostVersion).lib;boost_log_setup-$(BoostVersion).lib;boost_regex-$(BoostVersion).lib;boost_system-$(BoostVersion).lib;boost_thread-$(BoostVersion).lib;icestorm-$(IceVersion).lib;iceutil-$(IceVersion).lib;ice-$(IceVersion).lib;protobuf-$(ProtobufVersion).lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;gmock-$(GmockVersion).lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>$(TargetDir)$(TargetFileName)</Command>
@@ -172,7 +172,7 @@
       <AdditionalLibraryDirectories>..\target\test-nar\gmock_main-$(GmockVersion)-amd64-Windows-msvc-static\lib\amd64-Windows-msvc\static;..\target\test-nar\gmock-$(GmockVersion)-amd64-Windows-msvc-static\lib\amd64-Windows-msvc\static;..\target\nar\lib\amd64-Windows-msvc\shared;..\target\nar\lib\amd64-Windows-msvc\static;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;gmock_main-$(GmockVersion).lib;gmock-$(GmockVersion).lib;boost_chrono-$(BoostVersion).lib;boost_date_time-$(BoostVersion).lib;boost_filesystem-$(BoostVersion).lib;boost_log-$(BoostVersion).lib;boost_log_setup-$(BoostVersion).lib;boost_regex-$(BoostVersion).lib;boost_system-$(BoostVersion).lib;boost_thread-$(BoostVersion).lib;icestorm-$(IceVersion).lib;iceutil-$(IceVersion).lib;ice-$(IceVersion).lib;protobuf-$(ProtobufVersion).lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;gmock-$(GmockVersion).lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>$(TargetDir)$(TargetFileName)</Command>
