--- a/parser/pom.xml
+++ b/parser/pom.xml
@@ -3,7 +3,7 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.openomd</groupId>
+    <groupId>io.github.openvega</groupId>
     <artifactId>openomd</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
@@ -37,13 +37,13 @@
   </build>
   <dependencies>
     <dependency>
-      <groupId>uk.co.real-logic</groupId>
-      <artifactId>sbe-all</artifactId>
+      <groupId>io.github.openvega</groupId>
+      <artifactId>boost</artifactId>
+      <type>nar</type>
     </dependency>
     <dependency>
-      <groupId>org.openomd</groupId>
-      <artifactId>gtest</artifactId>
-      <version>1.8.0</version>
+      <groupId>uk.co.real-logic</groupId>
+      <artifactId>sbe-all</artifactId>
     </dependency>
   </dependencies>
 </project>
