--- a/parser/parser.vcxproj.filters
+++ b/parser/parser.vcxproj.filters
@@ -251,5 +251,14 @@
     <ClInclude Include="src\main\include\openomd\omdcparser.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\main\include\omdc_sbe\MarketTurnover.h">
+      <Filter>Header Files\sbe\omdc</Filter>
+    </ClInclude>
+    <ClInclude Include="src\main\include\omdc_sbe\Statistics.h">
+      <Filter>Header Files\sbe\omdc</Filter>
+    </ClInclude>
+    <ClInclude Include="src\main\include\omdc_sbe\Yield.h">
+      <Filter>Header Files\sbe\omdc</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
