--- a/parser/parser.vcxproj.filters
+++ b/parser/parser.vcxproj.filters
@@ -260,5 +260,17 @@
     <ClInclude Include="src\main\include\omdc_sbe\Yield.h">
       <Filter>Header Files\sbe\omdc</Filter>
     </ClInclude>
+    <ClInclude Include="src\main\include\omdc_sbe\BrokerQueueItem.h">
+      <Filter>Header Files\sbe\omdc</Filter>
+    </ClInclude>
+    <ClInclude Include="src\main\include\omdc_sbe\News.h">
+      <Filter>Header Files\sbe\omdc</Filter>
+    </ClInclude>
+    <ClInclude Include="src\main\include\omdc_sbe\StockConnectDailyQuotaBalance.h">
+      <Filter>Header Files\sbe\omdc</Filter>
+    </ClInclude>
+    <ClInclude Include="src\main\include\omdc_sbe\StockConnectMarketTurnover.h">
+      <Filter>Header Files\sbe\omdc</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
