--- a/parser/parser-test/parser-test.vcxproj
+++ b/parser/parser-test/parser-test.vcxproj
@@ -187,6 +187,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\test\c\omdc.cpp" />
+    <ClCompile Include="..\src\test\c\omdd.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
