--- a/parser/parser-test/parser-test.vcxproj.filters
+++ b/parser/parser-test/parser-test.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="..\src\test\c\omdc.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\test\c\omdd.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\test\include\openomd\parser-test.h">
