--- a/parser/parser.vcxproj.filters
+++ b/parser/parser.vcxproj.filters
@@ -272,5 +272,16 @@
     <ClInclude Include="src\main\include\omdc_sbe\StockConnectMarketTurnover.h">
       <Filter>Header Files\sbe\omdc</Filter>
     </ClInclude>
+    <ClInclude Include="src\main\include\omdd_sbe\GroupSize8Reverse.h">
+      <Filter>Header Files\sbe\omdd</Filter>
+    </ClInclude>
+    <ClInclude Include="src\main\include\openomd\omddparser.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="omdpatch.sh">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
